<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:onClick="onClickLayout">
    <!--배경에 이벤트 등록-->

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095"
        app:srcCompat="@drawable/h1_logo" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:onClick="onClickTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        app:layout_constraintVertical_bias="0.081">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonKorea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#56E0F1"
                android:gravity="bottom|center_horizontal"
                android:text="@string/korea"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonWorld"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#8bc34a"
                android:text="button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:clickable="true">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:background="@drawable/shape_corona"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textPatient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/patient"
                    style="@style/InfoText"/>

                <TextView
                    android:id="@+id/textPatient_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_no"
                    style="@style/InfoText.Large"/>

                <TextView
                    android:id="@+id/textPatient_diff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InfoText"
                    android:text="@string/patient_diff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_corona"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textDeath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InfoText.World"
                    android:text="@string/death" />

                <TextView
                    android:id="@+id/textDeath_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InfoText.Large.World"
                    android:text="@string/death_no" />

                <TextView
                    android:id="@+id/textDeath_diff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InfoText.World"
                    android:text="@string/death_diff" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonDaily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/daily"
        android:onClick="onClickDaily"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.251" />
</androidx.constraintlayout.widget.ConstraintLayout>